@@ -11,6 +11,7 @@ extern int errno;
 
 struct tai *leapsecs = 0;
 int leapsecs_num = 0;
+static int debug = 0 ;
 
 int leapsecs_read()
 {
@@ -24,21 +25,21 @@ int leapsecs_read()
   /* FILENAME_MAX is defined in stdio.h */
   char *inv, leapfile[FILENAME_MAX];
 
-  fprintf(stderr, "leapsecs_read()\n") ;
+  if (debug) fprintf(stderr, "leapsecs_read()\n") ;
   inv = getenv("DVPATH");
   if (inv == NULL)
     strcpy(leapfile, "leapsecs.dat");
   else
   {
-    fprintf(stderr, "  inv = %s\n", inv) ;
+    if (debug) fprintf(stderr, "  inv = %s\n", inv) ;
     sprintf(leapfile, "%s/leapsecs.dat", inv);
    }
   //printf ( "leapfile %s\n", leapfile  );
-  fprintf(stderr, "  Opening %s\n", leapfile) ;
+  if (debug) fprintf(stderr, "  Opening %s\n", leapfile) ;
   fd = open(leapfile, O_RDONLY | O_NDELAY);
   if (fd == -1) 
   {
-    fprintf(stderr, "  Open of %s failed\n", leapfile) ;
+    if (debug) fprintf(stderr, "  Open of %s failed\n", leapfile) ;
     if (errno != ENOENT) 
     {
        fprintf(stderr, "leapsecs_read() returning -1, line %d\n", __LINE__) ;
@@ -48,7 +49,7 @@ int leapsecs_read()
        free(leapsecs);
     leapsecs = 0;
     leapsecs_num = 0;
-    fprintf(stderr, "leapsecs_read() returning 0\n") ;
+    if (debug) fprintf(stderr, "leapsecs_read() returning 0\n") ;
     return 0;
   }
 
@@ -78,7 +79,7 @@ int leapsecs_read()
 
   n /= sizeof(struct tai);
 
-  fprintf(stderr, "  calling tai_unpack()\n") ;
+  if (debug) fprintf(stderr, "  calling tai_unpack()\n") ;
   for (i = 0;i < n;++i) {
     tai_unpack((char *) &t[i],&u);
     t[i] = u;
@@ -89,6 +90,6 @@ int leapsecs_read()
 
   leapsecs = t;
   leapsecs_num = n;
-  fprintf(stderr, "leapsecs_read() returning 0, line %d leapsecs_num = %d\n", __LINE__, leapsecs_num) ;
+  if (debug) fprintf(stderr, "leapsecs_read() returning 0, line %d leapsecs_num = %d\n", __LINE__, leapsecs_num) ;
   return 0; /* Added by JCB, as no return value was defined. */
 }
