@@ -1,4 +1,8 @@
 ==================================================================================================
+Changes for 3.x
+==================================================================================================
+- Bug Fix (788) Dataviewer displays Y-axis values if the Units button is selected.
+==================================================================================================
 Changes for 3.2
 ==================================================================================================
 - Bug Fix (1033): Daqd frame writer changes:
